@@ -10,6 +10,9 @@ CVS HEAD
   * Implemented option for adding instruments in separate directories in the
     instruments DB (patch by Chris Cherrett & Andrew Williams, a bit adjusted)
 
+  * Added support for controlling the global sampler-wide limit of
+    maximum voices and disk streams
+
   * Added support for escaping unicode characters
 
   * API Changes
